--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 </section>
 
 <div class="boton-wsp">
-  <a href="https://api.whatsapp.com/send?phone=5491166416777&text=solicito%20info" target="_blank">
+  <a href="https://api.whatsapp.com/send?phone=5491166416777&text=solicito%20info%20diplomaturaGIF" target="_blank">
     💬 Solicitar información por WhatsApp
   </a>
 </div>
