--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hora Mundo</title>
+
+  <!-- Etiquetas para compartir -->
+  <meta property="og:title" content="Hora Mundo 🌍⏰">
+  <meta property="og:description" content="Descubre qué hora es en distintas partes del mundo con un solo clic.">
+  <meta property="og:image" content="https://superheroesdigitales.github.io/11/img/123.jpg">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://superheroesdigitales.github.io/11/">
+ 
+  <meta charset="UTF-8">
   <title>Diplomatura en Superpoderes Digitales</title>
   <style>
     body { font-family: Arial, sans-serif; line-height: 1.6; margin: 0; padding: 0; background-color: #fefefe; color: #333; }
