--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Hora Mundo</title>
 
   <!-- Etiquetas para compartir -->
-  <meta property="og:title" content="Hora Mundo 🌍⏰">
-  <meta property="og:description" content="Descubre qué hora es en distintas partes del mundo con un solo clic.">
+  <meta property="og:title" content="Estructura de la Diplomatura 🌍⏰">
+  <meta property="og:description" content="Esctructura dela Diplomatura (Robótica+ IA+ Arduino, para Jóvenes de 10 a 17 años).">
   <meta property="og:image" content="https://superheroesdigitales.github.io/11/img/123.jpg">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://superheroesdigitales.github.io/11/">
