--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <!-- Etiquetas para compartir -->
   <meta property="og:title" content="Estructura de la Diplomatura 🌍⏰">
-  <meta property="og:description" content="Esctructura dela Diplomatura (Robótica+ IA+ Arduino, para Jóvenes de 10 a 17 años).">
+  <meta property="og:description" content="Robótica+ IA+ Arduino, para Jóvenes de 10 a 17 años.">
   <meta property="og:image" content="https://superheroesdigitales.github.io/11/img/123.jpg">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://superheroesdigitales.github.io/11/">
