--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Hora Mundo</title>
 
   <!-- Etiquetas para compartir -->
-  <meta property="og:title" content="Estructura de la Diplomatura 🌍⏰">
+  <meta property="og:title" content="Estructura de la Diplomatura 🌍 (Precios/ Ofertas)">
   <meta property="og:description" content="Robótica+ IA+ Arduino, para Jóvenes de 10 a 17 años.">
   <meta property="og:image" content="https://superheroesdigitales.github.io/11/img/123.jpg">
   <meta property="og:type" content="website">
