--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
     <div class="precio">
       <h3>🟠 Curso individual</h3>
       <p><strong>Precio:</strong> USD $97</p>
-      <p>Acceso por 2 meses</p>
-      <p>Pago en 2 cuotas<br><strong>¡Sin interés!</strong></p>
+      <p>Duración 1 mes</p>
+      <p>Pago en 1 cuotas<br><strong>¡Sin interés!</strong></p>
     </div>
 
     <div class="precio">
       <h3>🔵 Pack 3 cursos</h3>
       <p><strong>Precio:</strong> USD $247</p>
-      <p>Acceso durante 6 meses</p>
+      <p>Duración 6 meses</p>
       <p>Pago en 3 cuotas<br><strong>¡Sin interés!</strong></p>
     </div>
 
@@ -108,7 +108,7 @@
       <h3>🔴 Oferta Irresistible</h3>
       <p><strong>Precio:</strong> USD $197</p>
       <p>Incluye los 3 cursos + bono de asesoría personalizada</p>
-      <p>Pago en 2 cuotas<br><strong>¡Sin interés!</strong></p>
+      <p>Dureción 6 meses.  Pago en 1 cuotas<br><strong>¡Sin interés!</strong></p>
     </div>
   </div>
 </section>
